@@ -6,22 +6,22 @@
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
  * (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
  *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
  * in the United States and other countries.]
  *
  * --------------------
@@ -81,11 +81,18 @@ public class ImageTitleTests extends TestCase {
     public void testEquals() {
         ImageTitle t1 = new ImageTitle(JFreeChart.INFO.getLogo());
         ImageTitle t2 = new ImageTitle(JFreeChart.INFO.getLogo());
-        assertEquals(t1, t2);        
+        assertEquals(t1, t2);
+
+        t1.setImage(new BufferedImage(2, 1, BufferedImage.TYPE_INT_RGB));
+        assertFalse(t1.equals(t2));
+        t2.setImage(new BufferedImage(2, 1, BufferedImage.TYPE_INT_RGB));
+        // images considered equal only if they're the SAME object
+        // TODO: is there a way to do a better test?
+        assertFalse(t1.equals(t2));
     }
 
     /**
-     * Two objects that are equal are required to return the same hashCode. 
+     * Two objects that are equal are required to return the same hashCode.
      */
     public void testHashcode() {
         ImageTitle t1 = new ImageTitle(JFreeChart.INFO.getLogo());
@@ -95,7 +102,7 @@ public class ImageTitleTests extends TestCase {
         int h2 = t2.hashCode();
         assertEquals(h1, h2);
     }
-    
+
     /**
      * Confirm that cloning works.
      */
@@ -117,13 +124,11 @@ public class ImageTitleTests extends TestCase {
      * Serialize an instance, restore it, and check for equality.
      */
     public void testSerialization() {
-
         // TODO: add serialization support for images
-
     }
-    
+
     private static final double EPSILON = 0.00000001;
-    
+
     /**
      * Check the width and height.
      */
@@ -132,28 +137,28 @@ public class ImageTitleTests extends TestCase {
         assertEquals(100, t1.getWidth(), EPSILON);
         assertEquals(100, t1.getHeight(), EPSILON);
     }
-    
+
     /**
      * Some checks for the arrange method.
      */
     public void testArrangeNN() {
-        BufferedImage image = new BufferedImage(100, 100, 
+        BufferedImage image = new BufferedImage(100, 100,
         		BufferedImage.TYPE_INT_RGB);
         Graphics2D g2 = image.createGraphics();
         ImageTitle t = new ImageTitle(JFreeChart.INFO.getLogo());
         Size2D s = t.arrange(g2);
         assertEquals(102.0, s.getWidth(), EPSILON);
         assertEquals(102.0, s.getHeight(), EPSILON);
-        
+
         t.setPadding(1.0, 2.0, 3.0, 4.0);
         s = t.arrange(g2);
         assertEquals(106.0, s.getWidth(), EPSILON);
         assertEquals(104.0, s.getHeight(), EPSILON);
-        
+
         t.setMargin(5.0, 6.0, 7.0, 8.0);
         s = t.arrange(g2);
         assertEquals(120.0, s.getWidth(), EPSILON);
         assertEquals(116.0, s.getHeight(), EPSILON);
     }
-    
+
 }
